Added error boxes for dispatcher screen

--- a/DCAD.kv
+++ b/DCAD.kv
@@ -175,6 +175,7 @@
 
 <DCADOfficerInfo>
     BoxLayout:
+        id: layout
         height: root.height / 10
         orientation: 'horizontal'
         canvas.before:
@@ -197,8 +198,7 @@
         Button:
             id: 10-8
             text: "10-8"
-        Button:
-            id: send
-            text: "Send"
+
+
 
 
