Added dynamic officer display:
Errors:
Not showing widgets correctly currently

--- a/DCAD.kv
+++ b/DCAD.kv
@@ -167,7 +167,8 @@
                                 foreground_color: 0, 1, 0, .5
                                 font_size: self.height * .25
                                 size_hint: 1.5, 1
-            OfficerBox
+            OfficerBox:
+                id: ob
 
 
 <OfficerBox>
