--- a/Kivy Files/VCAD.kv
+++ b/Kivy Files/VCAD.kv
@@ -23,190 +23,7 @@
 
 
 <HBoxWidget>:
-	BoxLayout:
-		size: root.size
-		pos: root.pos
-		id: boxlayout_h
-		orientation: 'horizontal'
 
-        canvas.before:
-            Color:
-                rgba: 0, 0, 1, .25
-            Rectangle:
-                pos: self.pos
-                size: self.size
-
-        GridLayout:
-            rows: 9
-            BoxLayout:
-                size_hint: 1, .5
-                padding: 0, 5, 0, 0
-                MyLabel:
-                    size_hint: 1, .75
-                    text: 'Current Call'
-
-
-            BoxLayout:
-                size_hint: 1, .75
-                padding: 20, 5
-                orientation: 'horizontal'
-                MyLabel:
-                    size_hint: .5, .75
-                    font_size: self.height * .5
-                    text: '   Call Type:  '
-                MyLabel:
-                    text: 'Break in'
-                    size_hint: 1, .75
-                    font_size: '50dp'
-                    color: 0, 1, 0, .5
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-
-            BoxLayout:
-                size_hint: 1, .75
-                padding: 20, 5
-                orientation: 'horizontal'
-                MyLabel:
-                    size_hint: .5, .75
-                    font_size: self.height * .5
-                    text: 'Street Address: '
-                MyLabel:
-                    text: '123 S Main Street'
-                    size_hint: 1, .75
-                    font_size: self.height * .75
-                    color: 0, 1, 0, .5
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-            BoxLayout:
-                size_hint: 1, .75
-                padding: 20, 5
-                orientation: 'horizontal'
-                MyLabel:
-                    size_hint: .5, .75
-                    font_size: self.height * .5
-                    text: '     City:     '
-                MyLabel:
-                    text: 'Milwaukee'
-                    size_hint: 1, .75
-                    font_size: self.height * .75
-                    color: 0, 1, 0, .5
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-
-            BoxLayout:
-                size_hint: 1, .75
-                padding: 20, 5
-                orientation: 'horizontal'
-                MyLabel:
-                    size_hint: .5, .75
-                    font_size: self.height * .5
-                    text: '   Zip Code:   '
-                MyLabel:
-                    text: '12345'
-                    size_hint: 1, .75
-                    font_size: self.height * .75
-                    color: 0, 1, 0, .5
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-
-            BoxLayout:
-                size_hint: 1, .75
-                padding: 20, 5
-                orientation: 'horizontal'
-                MyLabel:
-                    size_hint: .5, .75
-                    font_size: self.height * .5
-                    text: '     Place:    '
-                MyLabel:
-                    text: 'Residential'
-                    size_hint: 1, .75
-                    font_size: self.height * .75
-                    color: 0, 1, 0, .5
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-
-            BoxLayout:
-                size_hint: 1, .75
-                padding: 20, 5
-                orientation: 'horizontal'
-
-                MyLabel:
-                    size_hint: .5, .75
-                    font_size: self.height * .5
-                    text: '     Phone:    '
-                MyLabel:
-                    text: '123-456-7891'
-                    size_hint: 1, .75
-                    font_size: self.height * .75
-                    color: 0, 1, 0, .5
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-
-            BoxLayout:
-                size_hint: 1, 1
-                padding: 20, 5
-                orientation: 'horizontal'
-                MyLabel:
-                    size_hint: .5, .75
-                    text: '  Description: '
-                ScrollView:
-                    scroll_x: 1
-                    size_hint: 1, 1
-                    Label:
-                        size_hint: 1, None
-                        size: self.texture_size
-                        text: 'There was glass broken near the door, door was wide open.'
-                        color: 0, 1, 0, .5
-                        font_size: self.height * .07
-                        text_size: self.width, self.height
-                        height: self.texture_size[0]
-                        halign: 'left'
-                        valign: 'top'
-                        canvas.before:
-                            Color:
-                                rgba: 0, 0, 0, 1
-                            Rectangle:
-                                pos: self.pos
-                                size: self.size
-
-            BoxLayout:
-                size_hint: 1, .5
-                padding: 5, 5 , 20 , 5
-                orientation: 'horizontal'
-                MyLabel:
-                    text: 'Write Report:'
-
-                BoxLayout:
-
-                    Button:
-                        size_x: .5
-                        text: 'Write Report'
-
-        CallsBox
 
 <CallsBox>
 
@@ -228,7 +45,6 @@
     GridLayout:
         rows: 2
         AnchorLayout:
-
             canvas.before:
                 Color:
                     rgba: 1, 0, 0, .5
@@ -279,4 +95,194 @@
                     Button:
                         text: 'Logout'
                         id: logout
-        HBoxWidget
+        BoxLayout:
+            size: root.size
+            pos: root.pos
+            id: boxlayout_h
+            orientation: 'horizontal'
+
+            canvas.before:
+                Color:
+                    rgba: 0, 0, 1, .25
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+
+            GridLayout:
+                rows: 9
+                BoxLayout:
+                    size_hint: 1, .5
+                    padding: 0, 5, 0, 0
+                    MyLabel:
+                        size_hint: 1, .75
+                        text: 'Current Call'
+
+
+                BoxLayout:
+                    size_hint: 1, .75
+                    padding: 20, 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        size_hint: .5, .75
+                        font_size: self.height * .5
+                        text: '   Call Type:  '
+                    MyLabel:
+                        id: type
+                        size_hint: 1, .75
+                        text: ' '
+                        font_size: '50dp'
+                        color: 0, 1, 0, .5
+                        canvas.before:
+                            Color:
+                                rgba: 0, 0, 0, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                BoxLayout:
+                    size_hint: 1, .75
+                    padding: 20, 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        size_hint: .5, .75
+                        font_size: self.height * .5
+                        text: 'Street Address: '
+                    MyLabel:
+                        id: addr
+                        size_hint: 1, .75
+                        font_size: self.height * .75
+                        color: 0, 1, 0, .5
+                        text: ' '
+                        canvas.before:
+                            Color:
+                                rgba: 0, 0, 0, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+                BoxLayout:
+                    size_hint: 1, .75
+                    padding: 20, 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        size_hint: .5, .75
+                        font_size: self.height * .5
+                        text: '     City:     '
+                    MyLabel:
+                        id: city
+                        text: ' '
+                        size_hint: 1, .75
+                        font_size: self.height * .75
+                        color: 0, 1, 0, .5
+                        canvas.before:
+                            Color:
+                                rgba: 0, 0, 0, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                BoxLayout:
+                    size_hint: 1, .75
+                    padding: 20, 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        size_hint: .5, .75
+                        font_size: self.height * .5
+                        text: '   Zip Code:   '
+                    MyLabel:
+                        id: zip
+                        size_hint: 1, .75
+                        font_size: self.height * .75
+                        text: ' '
+                        color: 0, 1, 0, .5
+                        canvas.before:
+                            Color:
+                                rgba: 0, 0, 0, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                BoxLayout:
+                    size_hint: 1, .75
+                    padding: 20, 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        size_hint: .5, .75
+                        font_size: self.height * .5
+                        text: '     Place:    '
+                    MyLabel:
+                        id: place
+                        text: ' '
+                        size_hint: 1, .75
+                        font_size: self.height * .75
+                        color: 0, 1, 0, .5
+                        canvas.before:
+                            Color:
+                                rgba: 0, 0, 0, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                BoxLayout:
+                    size_hint: 1, .75
+                    padding: 20, 5
+                    orientation: 'horizontal'
+
+                    MyLabel:
+                        size_hint: .5, .75
+                        font_size: self.height * .5
+                        text: '     Phone:    '
+                    MyLabel:
+                        id: phone
+                        text: ' '
+                        size_hint: 1, .75
+                        font_size: self.height * .75
+                        color: 0, 1, 0, .5
+                        canvas.before:
+                            Color:
+                                rgba: 0, 0, 0, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                BoxLayout:
+                    size_hint: 1, 1
+                    padding: 20, 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        size_hint: .5, .75
+                        text: '  Description: '
+                    ScrollView:
+                        scroll_x: 1
+                        size_hint: 1, 1
+                        Label:
+                            size_hint: 1, None
+                            size: self.texture_size
+                            id: desc
+                            text: ' '
+                            color: 0, 1, 0, .5
+                            font_size: self.height * .07
+                            text_size: self.width, self.height
+                            height: self.texture_size[0]
+                            halign: 'left'
+                            valign: 'top'
+                            canvas.before:
+                                Color:
+                                    rgba: 0, 0, 0, 1
+                                Rectangle:
+                                    pos: self.pos
+                                    size: self.size
+
+                BoxLayout:
+                    size_hint: 1, .5
+                    padding: 5, 5 , 20 , 5
+                    orientation: 'horizontal'
+                    MyLabel:
+                        text: 'Write Report:'
+
+                    BoxLayout:
+
+                        Button:
+                            size_x: .5
+                            text: 'Write Report'
+
+            CallsBox
