--- a/Kivy Files/VCAD.kv
+++ b/Kivy Files/VCAD.kv
@@ -1,25 +1,55 @@
+# Padding, left, top, right, bottom
+
 <CallWidget>:
+    padding: 0, self.height / 15, 5, 10
+    width: root.width
     BoxLayout:
         id: layout
         orientation: 'horizontal'
+
         canvas.before:
             Color:
-                rgba: 0, 0, 0, 1
-            Rectangle:
+                rgba: 0, 0, 0, .4
+            RoundedRectangle:
+                radius: [self.height * .5]
                 pos: self.pos
                 size: self.size
-        MyLabel:
-            id: time
-            color: 0, 1, 0, .5
-            text: "Time"
-        MyLabel:
-            color: 0, 1, 0, .5
-            id: address
-            text: "Address"
-        Button:
-            id: report
-            color: 0, 1, 0, .5
-            text: "Report"
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: .25, 1
+            padding: 5, 0, self.width / 10, 0
+            MyLabel:
+                id: callID
+                color: 0, 1, 0, .5
+
+        BoxLayout:
+            padding: 5, 0, self.width / 10, 0
+            orientation: 'vertical'
+            MyLabel:
+                id: time
+                color: 0, 1, 0, .5
+                text: "Time"
+        BoxLayout:
+            padding: 5, 0, self.width / 10, 0
+            orientation: 'vertical'
+            MyLabel:
+                color: 0, 1, 0, .5
+                id: address
+                text: "Address"
+        BoxLayout:
+            orientation: 'vertical'
+            Button:
+                canvas.before:
+                    Color:
+                        rgba: (.4,.4,.4, .65) if self.state=='normal' else (0,.7,.7,1)  # visual feedback of press
+                    RoundedRectangle:
+                        pos: self.pos
+                        size: self.size
+                        radius: [self.height * .5]
+                background_color: 0,0,0,0
+                font_size: .55 * self.height
+                id: report
+                text: "Report"
 
 
 <HBoxWidget>:
@@ -73,21 +103,56 @@
                         font_size: self.height * .75
                         text: "10-8 - In Service"
                 BoxLayout:
-                    padding: 30, 5
+                    #padding: 30, 5
                     size_hint: .25, .75
                     ToggleButton:
+                        canvas.before:
+                            Color:
+                                rgba: (1,0,0,1) if self.state=='normal' else (.4, 0.1, 0.2, .75)  # visual feedback of press
+                            RoundedRectangle:
+                                pos: self.pos
+                                size: self.size
+                                radius: [self.height * .5]
+                        background_color: 0,0,0,0
+                        font_size: .55 * self.height
                         id: tenSeven
                         text: '10-7'
                         on_state: root.press107()
 
                 BoxLayout:
                     padding: 30, 5
-                    size_hint: .25, .75
+                    #size_hint: .25, .75
                     ToggleButton:
+                        canvas.before:
+                            Color:
+                                rgba:(.1, .75, 0.1, 1) if self.state=='normal' else (0, .25, 0, .75)   # visual feedback of press
+                            RoundedRectangle:
+                                pos: self.pos
+                                size: self.size
+                                radius: [self.height * .5]
                         id: tenEight
+                        font_size: .55 * self.height
+                        background_color: 0,0,0,0
                         state: "down"
                         text: '10-8'
                         on_state: root.press108()
+                BoxLayout:
+                    padding: 30, 5
+                    #size_hint: .25, .75
+                    ToggleButton:
+                        canvas.before:
+                            Color:
+                                rgba: (.1,.1,.85,1) if self.state=='normal' else (.1, 0.2, 0.45, .85)  # visual feedback of press
+                            RoundedRectangle:
+                                pos: self.pos
+                                size: self.size
+                                radius: [self.height * .5]
+                        background_color: 0,0,0,0
+                        id: tenTwentyThree
+                        font_size: .55 * self.height
+                        state: "down"
+                        text: '10-23'
+
 
                 BoxLayout:
                     padding: 30, 5
@@ -285,4 +350,5 @@
                             size_x: .5
                             text: 'Write Report'
 
-            CallsBox
+            CallsBox:
+                id: cb
